kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hostname
  labels:
    app: node-hostname
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-hostname
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-hostname
        app.kubernetes.io/part-of: node-hostname
        app.kubernetes.io/managed-by: kustomize
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - node-hostname
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - image: gcr.io/bwt-test-460814/github.com/msumla/node-hostname:latest
        imagePullPolicy: IfNotPresent
        name: node-hostname
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 3000
          periodSeconds: 1
          timeoutSeconds: 1
        resources:
          limits:
            ephemeral-storage: 1Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
