kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: node-hostname
